verif/test/deca/context/invalid/op-un-non-logique-verif.res
src/test/deca/context/invalid/op-un-non-logique.deca:12:8: Unary 'Not' is not compatible with type 'int'
